@@ -199,6 +199,8 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * Special:Randompage now additionally accepts English namespace name as parameter
 * (bug 2981) Really fixed linktrail for Tamil (ta)
 * Disallow substituting Special pages when included into a page
+* (bug 5587) Clean up the languages from references to the Groups special page
+* Added new group-X and group-X-member messages
 
 == Compatibility ==
 
